Update index.html - Bold the task in instructions

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <li>You will see a grid of colored squares appear briefly on the screen</li>
                     <li>Try to remember the colors and positions of all squares</li>
                     <li>After a short delay, one square will be highlighted</li>
-                    <li><b>Your task: Decide if this highlighted square appeared in the same position in the previous display</b></li>
+                    <li>Your task: <b>Decide if this highlighted square appeared in the same position in the previous display</b></li>
                     <li>Click <b><span class="yes">"YES"</span></b> if the square WAS in that position</li>
                     <li>Click <b><span class="no">"NO"</span></b> if the square was NOT in that position</li>
                 </ul>
@@ -661,3 +661,4 @@
 </body>
 
 </html>
+
