--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <h1>Thank You! 🎉</h1>
                 <p >You have completed the experiment.</p>
                 <p style="margin-top: 20px;">Your data has been prepared for download.</p>
-                <p>Would you be a doll and send this CSV file to the experimenter?</p>
+                <p style="color: #3c0443;">✨ Won't you be a doll and send this CSV file to the experimenter? ✨</p>
                 <button onclick="downloadResults()" style="margin-top: 30px;">Download Results</button>
             </div>
         </div>
@@ -751,4 +751,5 @@
     </script>
 </body>
 </html>
+
 
