Final change, I guess

--- a/index.html
+++ b/index.html
@@ -244,10 +244,6 @@
             color: maroon;
         }
 
-        #thankYouPage {
-            background-image: url('../../../../../../Downloads/thank-you-image.jpg');
-            background-size: 100%;
-        }
     </style>
 </head>
 <body>
@@ -300,7 +296,7 @@
                 </ul>
                 <h2 style="margin-top: 20px;">Important:</h2>
                 <ul>
-                    <li>The experiment consists of 5 sets (each with 20 trials) with increasing difficulty</li>
+                    <li>The experiment consists of 5 sets (each with 15 trials) with increasing difficulty</li>
                     <li><b>Try to be as accurate as possible</b></li>
                     <li>Respond as quickly as you can while maintaining accuracy</li>
                 </ul>
@@ -323,9 +319,9 @@
         <div id="thankYouPage" class="page">
             <div class="thank-you">
                 <h1>Thank You! 🎉</h1>
-                <p >You have completed the experiment.</p>
+                <p>You have completed the experiment.</p>
                 <p style="margin-top: 20px;">Your data has been prepared for download.</p>
-                <p style="color: #3c0443;">✨ Won't you be a doll and send this CSV file to the experimenter? ✨</p>
+                <p style="color: #3c0443; font-family: 'Brush Script MT', cursive; font-size: 20pt;">✨ Won't you be a doll and send this CSV file to the experimenter? ✨</p>
                 <button onclick="downloadResults()" style="margin-top: 30px;">Download Results</button>
             </div>
         </div>
@@ -751,5 +747,3 @@
     </script>
 </body>
 </html>
-
-
